tests/ui/uninhabited/void-branch.stderr
error: unreachable expression
  --> $DIR/void-branch.rs:10:13
   |
LL |             std::mem::uninitialized::<Void>();
   |             --------------------------------- any code following this expression is unreachable
LL |             println!();
   |             ^^^^^^^^^^ unreachable expression
   |
note: this expression has type `Void`, which is uninhabited
  --> $DIR/void-branch.rs:9:13
   |
LL |             std::mem::uninitialized::<Void>();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/void-branch.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/void-branch.rs:25:9
   |
LL |         infallible();
   |         ------------ any code following this expression is unreachable
LL |         println!()
   |         ^^^^^^^^^^ unreachable expression
   |
note: this expression has type `Infallible`, which is uninhabited
  --> $DIR/void-branch.rs:24:9
   |
LL |         infallible();
   |         ^^^^^^^^^^^^

error: aborting due to 2 previous errors

